Date	Added
11/28
	* Changed Suilds Extention Skill to +6 people per level. [Lupus]
	  (tested it for 2 weeks! or a big server)
	* Added a fix for gettimeofday() for WIN32 [Codemaster]
11/27
	* Fixed a few map crashes when char-server crashes [Wizputer]
	* Added fix of 0x2aff and 0x2af8 flooding [Wizputer - thanks Toster] 
	* Fixed Map crash when person uses global message hacks [Wizputer]
	* Fixed online system, online column works and prevent double login at the login server [Wizputer]
	* Fixed some compile time errors associated with showmsg [MouseJstr]
	* Added get_svn_revision() in core.c [MC Cameri]
	  -Only if you have the file .svn\entries, it will show the revision # at runtime.

11/26   
	* Fixed Abrakadabra (2 minor bugs of consumed items - they were ignored if placed in 0 pos) [Lupus]
        * Finished Full Strip, Weapon Refine, Slim Pitcher and Full Protection. [celest]
        * Added skill_nocast_db.txt. Use it to set which skills cannot be used in
          which conditions [celest]

11/25
	* Added @skilltree to help GM's answer skill tree questions [MouseJstr]
	* Update Spider Web; I believe you cannot use it on yourself now. [Codemaster]
        * Added Ore Discovery, and base code for Slim Pitcher and Preservation [celest]

11/24
	* @charreset #reset [MC Cameri]
	* @charstatsall is now #statsall [MC Cameri]
	* @charsave is now #save [MC Cameri]
	* Updated most of jA's 1067; battle.c and skill.c might need more updates! [Codemaster]
	* Fixed char-txt crashing when closing, Codemaster free()'s. [MC Cameri]
        * Skill Updates: [celest]
          - Updated guild skills (60%)
          - updated Weapon Repair and Aura Blade by DracoRPG
          - modified Weapon Repair to use Identify's packet, should show a list of
            repairable items now

11/23
	* Fixed script loading small/large monsters. [Valaris]
	* @charoption is now #option [MC Cameri]
	* @charpetfriendly is now #petfriendly [MC Cameri]
	* @charstats is now #stats [MC Cameri]